Fix spacing and small bugs

--- a/views/gateway/addItem.pug
+++ b/views/gateway/addItem.pug
@@ -50,7 +50,7 @@ block content
           textarea#body2.form-control(name='body')
 
 
-        input.btn.btn-primary.m-r-1(type='submit', value='Insert')
+        input.btn.btn-primary.mr-1(type='submit', value='Insert')
         a.btn.btn-secondary(href=`/gateway/get-children/${parentId}`) Cancel
 
 block scripts
