--- a/views/notebook/addNote.pug
+++ b/views/notebook/addNote.pug
@@ -15,4 +15,4 @@ block content
           label(for='body') Body
           textarea.form-control(id='body',name='body')= body
         input.btn.btn-primary(type='submit', value='Insert')
-        a.btn.btn-secondary.m-l-1(href='/notebook') Cancel
+        a.btn.btn-secondary.ml-1(href='/notebook') Cancel
