--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -1,25 +1,16 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.align-items-center#fill-view
-    .offset-sm-3.col-sm-6.text-center
+  .row.align-items-center.justify-content-center#fill-view
+    .col.text-center
       h3 Profile Page
-      ul.list-group
+      ul.list-group.d-inline-flex
         .list-group-item
-          .row
-            .col-2
-              i.fa.fa-envelope
-            .col-8
-              span= email
+          i.fa.fa-envelope.mr-2
+          span= email
         .list-group-item
-          .row
-            .col-2
-              i.fa.fa-key
-            .col-8
-              a(href='/user/profile/change-password') Change Password
+          i.fa.fa-key.mr-2
+          a(href='/user/profile/change-password') Change Password
         .list-group-item
-          .row
-            .col-2
-              i.fa.fa-users
-            .col-8
-              span= status[0].toUpperCase() + status.slice(1)
+          i.fa.fa-users.mr-2
+          span= status[0].toUpperCase() + status.slice(1)
