--- a/views/notebook/editNote.pug
+++ b/views/notebook/editNote.pug
@@ -14,17 +14,32 @@ block content
         .form-group
           label(for='body') Body
           textarea.form-control(id='body',name='body')= body
-        input.btn.btn-primary(type='submit', value='Update')
+
+        button.btn.btn-success.ml-1#previewButton(type='button',data-toggle="modal", data-target="#preview") Preview
+        input.btn.btn-primary.ml-1(type='submit', value='Update')
         a.btn.btn-secondary.ml-1(href=`/notebook/view-note/${slug}`) Done
         button.btn.btn-danger.ml-1(type='button',data-toggle="modal", data-target="#delete") Delete
+
+block scripts
+  script( defer src="/js/notebook/editNote.js")
+
+  #preview.modal.fade(tabindex="-1",role='dialog', aria-labelledby="previewLabel")
+    .modal-dialog(role="document", style="max-width: 70%;")
+      .modal-content
+        .modal-header
+          h4.modal-title(id='previewLabel') Preview
+          button.close(type='button', data-dismiss='modal') &times;
+        .modal-body#previewBody
+        .modal-footer
+          button.btn.btn-secondary.ml-1(data-dismiss='modal') Cancel
 
   #delete.modal.fade(tabindex="-1",role='dialog', aria-labelledby="myModalLabel")
     form(action=`/notebook/delete-note/${slug}`,method='post')
       .modal-dialog(role="document")
         .modal-content
           .modal-header
-            button.close(type='button', data-dismiss='modal') &times;
             h4.modal-title(id='myModalLabel') Delete Slug
+            button.close(type='button', data-dismiss='modal') &times;
           .modal-body
             p Are you sure you want to <b>delete</b> this? If so, please enter the slug of the note below:
             .form-group
