--- a/views/notebook/editNote.pug
+++ b/views/notebook/editNote.pug
@@ -20,9 +20,6 @@ block content
         a.btn.btn-secondary.ml-1(href=`/notebook/view-note/${slug}`) Done
         button.btn.btn-danger.ml-1(type='button',data-toggle="modal", data-target="#delete") Delete
 
-block scripts
-  script( defer src="/js/notebook/editNote.js")
-
   #preview.modal.fade(tabindex="-1",role='dialog', aria-labelledby="previewLabel")
     .modal-dialog(role="document", style="max-width: 70%;")
       .modal-content
@@ -48,3 +45,6 @@ block scripts
           .modal-footer
             input.btn.btn-danger(type='submit', value='Delete Note')
             button.btn.btn-secondary.ml-1(data-dismiss='modal') Cancel
+
+block scripts
+  script( defer src="/js/notebook/previewNote.js")
