--- a/views/admin/invite.pug
+++ b/views/admin/invite.pug
@@ -11,4 +11,4 @@ block content
         .form-group
           label(for='password') Password
           input.form-control( id='password', name='password', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required, placeholder='Enter Password' )
-        input.btn.btn-primary(type='submit', value='Invite')
+        input.btn.btn-primary.disableOnClick(type='submit', value='Invite')
