--- a/views/user/changePassword.pug
+++ b/views/user/changePassword.pug
@@ -13,7 +13,7 @@ block content
           input.form-control( id='repeat', name='repeat', type='password', maxlength=256, required, title='Must be between 6 to 256 characters', placeholder='Repeat Password')
         .recaptcha.m-x-auto.m-b-1.
           !{recaptcha}
-        input.btn.btn-primary(type='submit', value='Submit')
+        input.btn.btn-primary.disableOnClick(type='submit', value='Submit')
 
 block scripts
   script(src='/js/user/changePassword.min.js')
