--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -11,5 +11,5 @@ block content
         .form-group
           label(for='password') Password
           input.form-control( id='password', name='password', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required, placeholder='Enter Password' )
-        input.btn.btn-primary(type='submit', value='Login')
+        input.btn.btn-primary.disableOnClick(type='submit', value='Login')
       small New here? Click <a href='/user/register'>here</a> to Register.
