Added custom message with pattern needed for pid
This commit along with last few closes #46.

--- a/views/gateway/addItem.pug
+++ b/views/gateway/addItem.pug
@@ -58,5 +58,7 @@ block scripts
   script.
     function addPattern(pattern) {
       if ( !pattern ) pattern = ".+";
-      $('#pid').attr('pattern', pattern);
+      $('#pid')
+      .attr('pattern', pattern)
+        [0].setCustomValidity(`You need to match the RegExp: ${pattern}`);
     }
