Fixed bug in html5 pattern

--- a/views/gateway/editItem.pug
+++ b/views/gateway/editItem.pug
@@ -84,5 +84,5 @@ block scripts
       if ( !pattern ) pattern = ".+";
       $('#pid')
       .attr('pattern', pattern)
-        [0].setCustomValidity(`You need to match the RegExp: ${pattern}`);
+      .attr('title', `Please match the RegExp: ${pattern}`);
     }
