Remove personal references from site

--- a/views/index/faq.pug
+++ b/views/index/faq.pug
@@ -10,7 +10,7 @@ block content
           div
             h4.list-group-item-heading Is everything on this site 100% accurate
 
-            p.list-group-item-text Of course not. It's written by a human(me), so there is bound to be errors. Some of the codes I have given are not even tested. Same goes for the hints. Do not assume everything you read to be true/correct. Use your own judgment and logic to decide whether the facts given on the site is right or wrong. If you spot any mistake, please report the <a href='/bugsandhugs'>bug</a>.
+            p.list-group-item-text Of course not. The contents are provided by human, so there is bound to be errors. Some of the codes we have given are not even tested. Same goes for the hints. Do not assume everything you read to be true/correct. Use your own judgment and logic to decide whether the facts given on the site is right or wrong. If you spot any mistake, please report the <a href='/bugsandhugs'>bug</a>.
 
         .list-group-item
           div
