Add support for changing user status

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -8,6 +8,6 @@ block content
         a(href='/admin/invite-user').list-group-item.list-group-item-action
           i.fa.fa-user-plus.mr-2
           span Invite User
-        a(href='/admin/user-list').list-group-item.list-group-item-action
+        a(href='/admin/user/list').list-group-item.list-group-item-action
           i.fa.fa-vcard.mr-2
           span User List
