--- a/views/notebook/viewNote.pug
+++ b/views/notebook/viewNote.pug
@@ -7,12 +7,15 @@ block content
         .text-center
           a(href='/notebook/add-note') #[i.fa.fa-plus] Add
           a.ml-1(href=`/notebook/edit-note/${note.slug}`) #[i.fa.fa-edit] Edit
+          <br/>
+          small
+            span Created By: #{note.createdBy} &nbsp;&nbsp;&nbsp;
+            span Updated By: #{note.lastUpdatedBy} &nbsp;&nbsp;&nbsp;
+
       .markdown-body.
-        <h1 style="margin-bottom: 8px;"> #{note.title} </h1>
+        <h1> #{note.title} </h1>
         <small>
-          Created By: #{note.createdBy} &nbsp;&nbsp;&nbsp;
           Created At: #{note.createdAt.toDateString()} &nbsp;&nbsp;&nbsp;
-          Updated By: #{note.lastUpdatedBy} &nbsp;&nbsp;&nbsp;
           Updated At: #{note.updatedAt.toDateString()}
         </small>
         <br/>
