--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -1,6 +1,15 @@
 doctype html
 html(lang='en')
   head
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    script(async, src="https://www.googletagmanager.com/gtag/js?id=UA-65362633-3")
+    script.
+      if (document.location.hostname.search("localhost") === -1) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-65362633-3');
+      }
     title CPPS
 
     link(rel="stylesheet", href="/scss/main.css", media="screen", title="no title", charset="utf-8")
