--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -27,6 +27,9 @@ html(lang='en')
       });
     script(type='text/javascript', src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML")
 
+    link(rel="stylesheet",href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css")
+    script(src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js")
+
   block head
 
   body
