Add username support (Closes #67)
Add logic to set username if it is undefined

--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -9,6 +9,9 @@ block content
           i.fa.fa-envelope.mr-2
           span= email
         .list-group-item
+          i.fa.fa-user.mr-2
+          span= username
+        .list-group-item
           i.fa.fa-key.mr-2
           a(href='/user/profile/change-password') Change Password
         .list-group-item
