Add "invite-only" feature in root dashboard
Created a key-val storage for settings. Closes #73.

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -11,3 +11,7 @@ block content
         a(href='/admin/user/list').list-group-item.list-group-item-action
           i.fa.fa-vcard.mr-2
           span User List
+        if status == 'root'
+          a(href='/root/settings').list-group-item.list-group-item-action
+            i.fa.fa-wrench.mr-2
+            span Settings
