--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,2 +1,4 @@
 footer.text-center.small.text-muted.mt-2
-  p &copy; 2016-2017 BACS All Rights Reserved.
+  p
+    span &copy; 2016-2017 All Rights Reserved 
+    a(href="https://github.com/bacsbd/cpps") CPPS
