Add support for adding problems from cf

--- a/views/gateway/form/inline-addItem.pug
+++ b/views/gateway/form/inline-addItem.pug
@@ -40,6 +40,7 @@ block scripts
           h3.modal-title Problem Details
           button.close(type='button', data-dismiss='modal') &times;
         .modal-body
+          #error.d-hide
           #wait
             p Retrieving details. Please Wait.
             i.fa.fa-spinner.fa-spin
