Add index value to items automatically

--- a/views/gateway/form/inline-addItem.pug
+++ b/views/gateway/form/inline-addItem.pug
@@ -46,6 +46,9 @@ block scripts
             i.fa.fa-spinner.fa-spin
           #showDetails.d-hide
             .form-group.row.d-hide
+              label.col-3.col-form-label(for='p-index') Index
+              input.col-9.form-control-plaintext(id='p-index', name='ind', value="0")
+            .form-group.row.d-hide
               label.col-3.col-form-label(for='p-type') Type
               input.col-9.form-control-plaintext(id='p-type', name='type', value='problem')
             .form-group.row
