Replace userId with username in donelist

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -15,3 +15,6 @@ block content
           a(href='/root/settings').list-group-item.list-group-item-action
             i.fa.fa-wrench.mr-2
             span Settings
+          a(href='/gateway/sync-problems').list-group-item.list-group-item-action.danger
+            i.fa.fa-wrench.mr-2
+            span Sync Problems
