Redirect to folder after update
Closes #83

--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -16,5 +16,5 @@ block content
             i.fa.fa-wrench.mr-2
             span Settings
           a(href='/gateway/sync-problems').list-group-item.list-group-item-action.danger
-            i.fa.fa-wrench.mr-2
+            i.fa.fa-refresh.mr-2
             span Sync Problems
