--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -63,7 +63,7 @@ block content
                     else
                         i.fa.fa-square-o(aria-hidden="true")
                     span &nbsp; &nbsp;
-                    a.btn.btn-light(href=`/gateway/done-list/${val._id}`)
+                    a.btn.btn-light.py-0(href=`/gateway/done-list/${val._id}`)
                       i.fa.fa-user-times(aria-hidden="true")
                       span= val.userSolved
                 else
