Show userInfo during setting userId in profile
Closes #95

--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -57,7 +57,7 @@ block content
                 label.col-3.col-form-label(for='userId') User Id
                 input.col-9.form-control(id='userId', name='userId')
           .modal-footer
-            button.btn.btn-primary.disableOnClick(type="submit") Set User Id
+            button.btn.btn-primary.disableOnClick.checkUserId(type="button") Check
             button.btn.btn-secondary(type="button" data-dismiss="modal") Close
 
 block scripts
