--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,7 +46,7 @@ button {
   position:   fixed;
   top:        0;
   width:      100%;
-  z-index:    1000;
+  z-index:    1000000;
 }
 
 /* When the body has the loading class, we turn
